syntax = "proto3";

package logs;

service LogService {
  rpc getLogs(GetLogsRequest) returns (GetLogsResponse) {}
}

message GetLogsRequest {
  int32 UserId = 1;
  string from = 2;
  string to = 3;
}

message GetLogsResponse {
  repeated Log logs = 1;
}

message Log {
  int32 UserId = 1;
  string description = 2;
  string createdAt = 3;
}
